imported navbar,assigned scss variables, minor refactoring

--- a/index.html
+++ b/index.html
@@ -235,69 +235,68 @@
     <section class="team">
       <div class="container info">
         <div class="heading_group">
-          <div class="heading_group">
-            <h6>
-              <!-- <span class="heading_weak">THE</span> -->
-              THE YONKO
-            </h6>
-            <p class="opac-6">The Yonko are the four most notorious and powerful pirate captains in the world. They are not allies nor are
-              they strictly enemies of one another.</p>
+          <h6>
+            <!-- <span class="heading_weak">THE</span> -->
+            THE YONKO
+          </h6>
+          <p class="opac-6">The Yonko are the four most notorious and powerful pirate captains in the world. They are not allies nor are they
+            strictly enemies of one another.</p>
+        </div>
+        
+      </div>
+      <div class="columns opac-6">
+        <div class="column">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="assets/img/whitebeard.jpg" alt="Placeholder image">
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content is-yellow has-text-centered">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="columns opac-6">
-          <div class="column">
-            <div class="card">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="assets/img/whitebeard.jpg" alt="Placeholder image">
-                </figure>
-              </div>
-              <div class="card-content">
-                <div class="content is-yellow has-text-centered">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
-                </div>
+        <div class="column">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="assets/img/shanks.png" alt="Placeholder image">
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content is-yellow has-text-centered">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
               </div>
             </div>
           </div>
-          <div class="column">
-            <div class="card">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="assets/img/shanks.png" alt="Placeholder image">
-                </figure>
-              </div>
-              <div class="card-content">
-                <div class="content is-yellow has-text-centered">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
-                </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="assets/img/bigmom.jpg" alt="Placeholder image">
+              </figure>
+            </div>
+            <div class="card-content">
+              <div class="content is-yellow has-text-centered">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
               </div>
             </div>
           </div>
-          <div class="column">
-            <div class="card">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="assets/img/bigmom.jpg" alt="Placeholder image">
-                </figure>
-              </div>
-              <div class="card-content">
-                <div class="content is-yellow has-text-centered">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
-                </div>
-              </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image is-4by3">
+                <img src="assets/img/kaido.jpg" alt="Placeholder image">
+              </figure>
             </div>
-          </div>
-          <div class="column">
-            <div class="card">
-              <div class="card-image">
-                <figure class="image is-4by3">
-                  <img src="assets/img/kaido.jpg" alt="Placeholder image">
-                </figure>
-              </div>
-              <div class="card-content">
-                <div class="content is-yellow has-text-centered">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
-                </div>
+            <div class="card-content">
+              <div class="content is-yellow has-text-centered">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec iaculis mauris.</p>
               </div>
             </div>
           </div>
